ChaiDevKRForce/force-app/main/default/objects/Account/fields/Field_COnversion_2__c.field-meta.xml
<CustomField>
    <fullName>Field_COnversion_2__c</fullName>
    <label>Field COnversion 2</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>