ChaiDevKRForce/force-app/main/default/objects/Account/fields/Field_Conversion__c.field-meta.xml
<CustomField>
    <fullName>Field_Conversion__c</fullName>
    <label>Field Conversion</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>