ChaiDevKRForce/force-app/main/default/objects/Account/fields/StringRecord__c.field-meta.xml
<CustomField>
    <fullName>StringRecord__c</fullName>
    <label>StringRecord</label>
    <length>255</length>
    <type>Text</type>
</CustomField>