ChaiDevKRForce/force-app/main/default/objects/Account/recordTypes/xyz.recordType-meta.xml
<RecordType>
    <fullName>xyz</fullName>
    <active>true</active>
    <label>xyz</label>
</RecordType>